hphp/hack/test/sound_dynamic/typing/generic_params.bad.php.exp
File "generic_params.bad.php", line 18, characters 3-32:
Typing error (Typing[4110])
  File "generic_params.bad.php", line 18, characters 26-32:
  Expected `dynamic`
  File "generic_params.bad.php", line 18, characters 7-9:
  Type `Box<int>` is not a subtype of `dynamic` under dynamic-aware subtyping
File "generic_params.bad.php", line 19, characters 3-43:
Typing error (Typing[4110])
  File "generic_params.bad.php", line 19, characters 37-43:
  Expected `dynamic`
  File "generic_params.bad.php", line 19, characters 7-15:
  Type `SimpleBox<string>` is not a subtype of `dynamic` under dynamic-aware subtyping
File "generic_params.bad.php", line 20, characters 3-35:
Typing error (Typing[4110])
  File "generic_params.bad.php", line 20, characters 29-35:
  Expected `dynamic`
  File "generic_params.bad.php", line 20, characters 7-12:
  Type `KeyBox<int>` is not a subtype of `dynamic` under dynamic-aware subtyping
File "generic_params.bad.php", line 29, characters 7-16:
Class AnotherBox must support dynamic at least as often as Getter:
Getter<vec<T>> is subtype of dynamic implies AnotherBox<T> is subtype of dynamic (Typing[4433])
  File "generic_params.bad.php", line 29, characters 7-16:
  Expected `dynamic`
  File "generic_params.bad.php", line 29, characters 7-16:
  Type `AnotherBox<T>` is not a subtype of `dynamic` under dynamic-aware subtyping
